--- a/style.css
+++ b/style.css
@@ -32,6 +32,13 @@ body {
     margin-bottom: 20px;
 }
 
+.hidden-input {
+    position: absolute;
+    left: -9999px;
+    opacity: 0;
+    pointer-events: none;
+}
+
 #modeToggle {
     padding: 15px 30px;
     font-size: 24px;
